@@ -304,9 +304,6 @@ namespace DiscImageChef.Decoders.SCSI
             decoded.Information = (uint)((sense[3] << 24) + (sense[4] << 16) + (sense[5] << 8) + sense[6]);
             decoded.AdditionalLength = sense[7];
 
-            if (sense.Length < decoded.AdditionalLength + 8)
-                return decoded;
-
             if(sense.Length >= 12)
                 decoded.CommandSpecific = (uint)((sense[8] << 24) + (sense[9] << 16) + (sense[10] << 8) + sense[11]);
 
